gcc/testsuite/g++.dg/other/main1.C
// PR c++/30021
// { dg-do compile }

int main(void,char**);  // { dg-error "incomplete type|invalid use" }
